--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -60,7 +60,8 @@
       "name-label": "Nome",
       "name-placeholder": "Seu nome completo",
       "phone-placeholder": "Seu número de telefone",
-      "phone-label": "Número de telefone"
+      "phone-label": "Número de telefone",
+      "signup-success": "Conta criada com sucesso!"
     }
   },
   "footer": {
