--- a/src/lib/i18n/locales/en/exceptions.json
+++ b/src/lib/i18n/locales/en/exceptions.json
@@ -11,6 +11,10 @@
 			"email-already-in-use": "This email or phone number is already in use",
 			"user-not-found": "User not found",
 			"password-not-set": "Log in with your provider and set a password in your account settings first",
+			"password": {
+				"incorrect-current": "The current password you entered is incorrect",
+				"no-password": "Create a password for you account first"
+			},
 			"verifications": {
 				"invalid-token": "Invalid verification token",
 				"expired-token": "Verification token expired",
