--- a/src/lib/i18n/locales/pt-BR/exceptions.json
+++ b/src/lib/i18n/locales/pt-BR/exceptions.json
@@ -12,6 +12,10 @@
 			"email-already-in-use": "Este email ou número de telefone já está em uso",
 			"user-not-found": "Usuário não encontrado",
 			"password-not-set": "Entre com o seu provedor e defina uma senha nas configurações da sua conta primeiro",
+			"password": {
+				"incorrect-current": "A senha atual que você enviou está incorreta",
+				"no-password": "Define uma senha para a sua conta primeiro"
+			},
 			"verifications": {
 				"invalid-token": "Token de verificação inválido",
 				"expired-token": "Token de verificação expirado",
