feat: invalidate password setting

--- a/src/lib/i18n/locales/en/routes/account.json
+++ b/src/lib/i18n/locales/en/routes/account.json
@@ -54,14 +54,20 @@
       "info": "To see the changes in your current session, re-login in the platform."
     },
     "password": {
-      "success": "Password updated successfully!",
+      "not-empty": {
+        "title": "Edit your account password",
+        "success": "Password updated successfully!"
+      },
+      "empty": {
+        "title": "Set your account password",
+        "success": "Password created successfully!"
+      },
       "pw": {
         "label": "Your new password"
       },
       "cpw": {
         "label": "Confirm your new password"
       },
-      "title": "Edit your account password",
       "info": "You do not have a password set. Setting a password will allow you to login without a third party provider.",
       "currpw": {
         "label": "Your current password"
