--- a/src/lib/i18n/locales/pt-BR/routes/account.json
+++ b/src/lib/i18n/locales/pt-BR/routes/account.json
@@ -16,7 +16,7 @@
       },
       "success": "Sua conta foi excluída com sucesso.",
       "title": "Excluir Conta Pessoal",
-      "info-short": "Você está prestes a excluir sua conta do Extensionly. Essa ação não pode ser desfeita."
+      "info-short": "Você está prestes a excluir sua conta da Extensionly. Essa ação não pode ser desfeita."
     },
     "email": {
       "info": "Enviaremos um e-mail para você para validar a alteração.",
