feat: ✨ add about page

--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -27,7 +27,8 @@
     },
     "save": "Save",
     "delete": "Delete",
-    "search-word": "Search"
+    "search-word": "Search",
+    "a": "The"
   },
   "dialogs": {
     "auth": {
