--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -27,7 +27,8 @@
     },
     "save": "Salvar",
     "delete": "Excluir",
-    "search-word": "Procurar"
+    "search-word": "Procurar",
+    "a": "A"
   },
   "dialogs": {
     "auth": {
