--- a/src/lib/i18n/locales/pt-BR/emails.json
+++ b/src/lib/i18n/locales/pt-BR/emails.json
@@ -3,7 +3,7 @@
 		"footer": {
 			"best-wishes": "Atenciosamente,",
 			"team": "Equipe da Extensionly",
-			"address": "Av. Tiarajú, Alegrete, Rio Grande do Sul, Brasil"
+			"address": "Rio Grande do Sul, Brasil"
 		},
 		"type": {
 			"validate_email": {
@@ -14,7 +14,7 @@
 			"reset_password": {
 				"subject": "🔒 Redefina sua senha",
 				"title": "uma requisição de redefinição de senha foi feita em seu nome.",
-				"subtitle": "Se você não reconhece esta atividade, ignore este e-mail. Caso contrário, redefina sua senha clicando no link a seguir:"
+				"subtitle": "Se você não reconhece esta atividade, <b>por favor, ignore este e-mail</b>. Caso contrário, redefina sua senha clicando no link a seguir:"
 			}
 		}
 	}
