--- a/src/lib/i18n/locales/pt-BR/routes/verify/password.json
+++ b/src/lib/i18n/locales/pt-BR/routes/verify/password.json
@@ -1,6 +1,6 @@
 {
   "v-password":{
-    "sent-email":"Email de redefinição enviado com sucesso!",
+    "sent-email":"As instruções para redefinir sua senha foram enviadas com sucesso para sua caixa de entrada!",
     "invalid-token":"Token de verificação inválido",
     "reset-pw-title": "Crie uma nova senha"
   }
