--- a/src/lib/i18n/locales/pt-BR/routes/verify/email.json
+++ b/src/lib/i18n/locales/pt-BR/routes/verify/email.json
@@ -1,5 +1,5 @@
 {
   "v-email":{
-    "email-validated":"Email validado com sucesso, por favor prossiga com o seu login!"
+    "email-validated":"Email validado com sucesso!"
   }
 }
