--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -63,7 +63,7 @@
       "phone-placeholder": "Your phone number",
       "phone-label": "Phone number",
       "signup-success": "Check your e-mail inbox to complete the registration!",
-      "accept-terms-label": "I have read and agree with the"
+      "accept-terms-label": "I have read and agreed to the"
     }
   },
   "footer": {
