--- a/src/lib/i18n/locales/pt-BR/routes/activities/default.json
+++ b/src/lib/i18n/locales/pt-BR/routes/activities/default.json
@@ -37,7 +37,7 @@
       "until": "até",
       "will-open": "Inscrições abrirão"
     },
-    "no-activities-found": "Não encontramos nenhuma atividade que corresponda a esse critério de pesquisa. \nVocê pode ter que atualizar o filtro.",
+    "no-activities-found": "Não encontramos nenhuma atividade que corresponda a esse critério de pesquisa. Você pode tentar atualizar o filtro.",
     "title": "Encontre atividades de extensão"
   }
 }
