--- a/src/lib/i18n/locales/pt-BR/exceptions.json
+++ b/src/lib/i18n/locales/pt-BR/exceptions.json
@@ -30,11 +30,13 @@
         "expired-token": "Token de verificação expirado",
         "validate_email": {
           "already-verified": "Email já foi verificado",
-          "cooldown-not-lifted": "Limitado a um email de verificação a cada 5 minutos"
+          "cooldown-not-lifted": "Limitado a um email de verificação a cada 5 minutos",
+          "no-verifications": "Este usuário não tem nenhuma verificação de email associada a ele",
+          "not-verified": "Esta conta ainda não foi verificada, por favor, verifique seu email"
         },
         "reset_password": {
-          "already-verified": "Email já foi verificado",
-          "cooldown-not-lifted": "Limitado a uma redefinição de senha a cada 5 minutos"
+          "cooldown-not-lifted": "Limitado a uma redefinição de senha a cada 5 minutos",
+          "no-verifications": "Este usuário não tem nenhuma verificação de redefinição de senha associada a ele"
         }
       },
       "unknown": {
