--- a/src/lib/i18n/locales/en/exceptions.json
+++ b/src/lib/i18n/locales/en/exceptions.json
@@ -25,8 +25,8 @@
       "email-not-found": "Email not found",
       "error-sending-email": "An unknown error occurred when sending the email, please try again later",
       "verifications": {
-        "invalid-token": "Invalid verification token",
-        "expired-token": "Verification token expired",
+        "invalid-token": "The token you are trying to verify is invalid",
+        "expired-token": "This verification token is expired",
         "validate_email": {
           "already-verified": "Email is already verified",
           "cooldown-not-lifted": "Limited to one verification email every 5 minutes",
