wip: 🚧 working on the text area element

--- a/src/lib/i18n/locales/en/default.json
+++ b/src/lib/i18n/locales/en/default.json
@@ -28,7 +28,8 @@
     "save": "Save",
     "delete": "Delete",
     "search-word": "Search",
-    "a": "The"
+    "a": "The",
+    "submit": "Submit"
   },
   "dialogs": {
     "auth": {
