--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -28,7 +28,8 @@
     "save": "Salvar",
     "delete": "Excluir",
     "search-word": "Procurar",
-    "a": "A"
+    "a": "A",
+    "submit": "Enviar"
   },
   "dialogs": {
     "auth": {
