--- a/src/lib/i18n/locales/pt-BR/routes/programs/new/default.json
+++ b/src/lib/i18n/locales/pt-BR/routes/programs/new/default.json
@@ -5,7 +5,8 @@
       "title-label": "Título",
       "title-placeholder": "Título do novo programa",
       "description-label": "Descrição",
-      "description-placeholder": "Descrição do novo programa"
+      "description-placeholder": "Descrição do novo programa",
+      "faculty-label": "Universidade atrelada ao programa"
     }
   }
 }
