--- a/src/lib/i18n/locales/pt-BR/zod.json
+++ b/src/lib/i18n/locales/pt-BR/zod.json
@@ -20,6 +20,9 @@
     },
     "phone": {
       "invalid": "O número de telefone parece inválido"
+    },
+    "select": {
+      "invalid": "A seleção parece inválida"
     }
   }
 }
