feat: ✨ add visibility and finishes program form

--- a/src/lib/i18n/locales/pt-BR/exceptions.json
+++ b/src/lib/i18n/locales/pt-BR/exceptions.json
@@ -16,6 +16,7 @@
       "passwords-not-match": "Senha inválida"
     },
     "users": {
+      "not-authorized": "Você não está autorizado a fazer isso",
       "email-already-in-use": "Este email ou número de telefone já está em uso",
       "user-not-found": "Usuário não encontrado",
       "password-not-set": "Entre com o seu provedor e defina uma senha nas configurações da sua conta primeiro",
