feat: ✨ add link to create new program

--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -29,7 +29,8 @@
     "delete": "Excluir",
     "search-word": "Procurar",
     "a": "A",
-    "submit": "Enviar"
+    "submit": "Enviar",
+    "programs": "Programas"
   },
   "dialogs": {
     "auth": {
