feat: ✨ add project creation

--- a/src/lib/i18n/locales/pt-BR/default.json
+++ b/src/lib/i18n/locales/pt-BR/default.json
@@ -30,7 +30,9 @@
     "search-word": "Procurar",
     "a": "A",
     "submit": "Enviar",
-    "programs": "Programas"
+    "programs": "Programas",
+    "projects": "Projetos",
+    "activities": "Atividades"
   },
   "dialogs": {
     "auth": {
