--- a/src/lib/i18n/locales/pt-BR/routes/projects/new.json
+++ b/src/lib/i18n/locales/pt-BR/routes/projects/new.json
@@ -10,7 +10,8 @@
       "use-program-faculty": "Selecionar a mesma universidade do programa",
       "use-program-visibility": "Selecionar a mesma visibilidade do programa",
       "accept-students-proposals": "Permitir que alunos proponham novas atividades de extensão para este projeto",
-      "visibility-label": "Visibilidade do projeto"
+      "visibility-label": "Visibilidade do projeto",
+      "faculty-label": "Universidade atrelada ao projeto"
     },
     "toast": {
       "success": "Projeto criado com sucesso!"
